crates/ars-components/src/selection/segment_group/snapshots/ars_components__selection__segment_group__tests__segment_group_indicator_empty.snap
---
source: crates/ars-components/src/selection/segment_group/mod.rs
expression: "snapshot_attrs(&empty.connect(&|_| {}).indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "segment-group",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
