crates/ars-components/src/selection/segment_group/snapshots/ars_components__selection__segment_group__tests__segment_group_indicator_selected.snap
---
source: crates/ars-components/src/selection/segment_group/mod.rs
expression: "snapshot_attrs(&selected.connect(&|_| {}).indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-active-value",
            ),
            String(
                "grid",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "segment-group",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
