crates/ars-components/src/selection/segment_group/snapshots/ars_components__selection__segment_group__tests__segment_group_item_selected.snap
---
source: crates/ars-components/src/selection/segment_group/mod.rs
expression: "snapshot_attrs(&selected.connect(&|_| {}).item_attrs(&key(\"grid\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "segment-group",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "checked",
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "grid",
            ),
        ),
        (
            Aria(
                Checked,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "view-mode-item-grid",
            ),
        ),
        (
            Role,
            String(
                "radio",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
