crates/ars-components/src/selection/segment_group/snapshots/ars_components__selection__segment_group__tests__segment_group_root_vertical_disabled_invalid_readonly.snap
---
source: crates/ars-components/src/selection/segment_group/mod.rs
expression: "snapshot_attrs(&root.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-orientation",
            ),
            String(
                "vertical",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "segment-group",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Id,
            String(
                "view-mode",
            ),
        ),
        (
            Role,
            String(
                "radiogroup",
            ),
        ),
    ],
    styles: [],
}
